Background image commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,16 @@
 <div class="section">
   <header class="header">
-    <nav class="nav bg-nav">
-      <a class="nav-link title lead bold">Angular 4</a>
+    <nav class="nav bg-nav container">
+      <a class="nav-link title lead bold" href="#">Angular 4</a>
       <a class="nav-link" href="#">Home</a>
       <a class="nav-link" href="#">About Us</a>
       <a class="nav-link" href="#">Contact Us</a>
     </nav>
   </header>
-  <section class="content">
+  <hr class="divider"/>
+  <section class="content container">
     <div class="start-template">
-      <h1>Welcome to {{title}}</h1>
+      <h1>The Art of Food</h1>
     </div>
   </section>
 </div>
