header and footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,56 @@
 <div class="section">
   <header class="header">
-    <nav class="nav bg-nav container">
-      <a class="nav-link title lead bold" href="#">Angular 4</a>
+    <!-- <nav class="nav">
+      <a class="nav-link lead bold" href="#">Angular 4</a>
       <a class="nav-link" href="#">Home</a>
       <a class="nav-link" href="#">About Us</a>
       <a class="nav-link" href="#">Contact Us</a>
+    </nav> -->
+    <nav class="head-nav">
+      <ul class="nav primary">
+        <li class="navli"><a class="nav-home active" href="/">Home</a></li>
+        <li class="navli"><a class="nav-tour" href="/#tour">Tour</a></li>
+        <li class="navli"><a class="nav-examples" href="/examples/">Examples</a></li>
+        <li class="navli"><a class="nav-signup" href="/signup/">Pricing &amp; Sign Up</a></li>
+      </ul>
+      <ul class="nav account">
+        <li class="navli"><a href="https://my.bigcartel.com/">Log In</a></li>
+        <li class="navli"><a href="https://help.bigcartel.com/">Help</a></li>
+        <li class="navli"><a href="https://blog.bigcartel.com/">Blog</a></li>
+      </ul>
     </nav>
   </header>
   <hr class="divider"/>
-  <section class="content container">
-    <div class="start-template">
-      <h1>The Art of Food</h1>
-    </div>
-  </section>
+  <div class="main">
+    <section class="pre-home">
+      <!-- <div class="start-template">
+        <h1>The Art of Food</h1>
+      </div> -->
+      <div class="background-image">
+        <img class="bg-img" src="http://education.iceandsky.com/img/prehome/back.jpg">
+      </div>
+    </section>
+  </div>
+
 </div>
-<footer>
+<footer id="footer" style="">
   
-</footer>
+    <p class="copyright">© 2017 • GAURAV BISHT</p>
+  
+    <nav>
+      <a href="#" class="open-popin legals">LEGAL NOTICES</a>
+      <a href="#" class="open-popin credits">CREDITS</a>
+      <a href="#" class="open-popin demarche">OUR APPROACH</a>
+      <a href="mailto:education@wild-touch.org" target="_blank">Contact</a>
+    </nav>
+  
+    <ul>
+      <li>
+        <a href="https://twitter.com/wild_touch" target="_blank">Twitter</a>
+      </li>
+      <li>
+        <a href="https://www.facebook.com/IceAndSkymovie" target="_blank">Facebook</a>
+      </li>
+    </ul>
+  
+  </footer>
